--- a/404.html
+++ b/404.html
@@ -84,7 +84,7 @@
         </li>
     
         <li>
-            <a href="/posts/post-2/">Post 2<aside class="dates">Oct 5 2017</aside></a>
+            <a href="/posts/post-2/">Duotone Color Effect<aside class="dates">Oct 5 2017</aside></a>
         </li>
     
         <li>
